tests/baselines/reference/staticIndexer.errors.txt
tests/cases/compiler/staticIndexer.ts(2,5): error TS1071: 'static' modifier cannot appear on an index signature.


==== tests/cases/compiler/staticIndexer.ts (1 errors) ====
    class C {
        static [s: string]: number;
        ~~~~~~
!!! error TS1071: 'static' modifier cannot appear on an index signature.
    }